# eulers-melting-pot

./: .gitattributes  .gitignore  180_analysis.hs  README.md  problem1.golf  problem10.cjam  problem100.snow  problem101.gibb  problem102.magi  problem103.dylan  problem104.zkl  problem105.fnl  problem106.joy  problem107.pi  problem108.agda  problem11.s  problem110.pip  problem111.n  problem112.fimpp  problem113.chef  problem114.bees  problem115.mt  problem116.ktn  problem117.pony  problem118.jl  problem119.gleam  problem12.ab  problem120.tome  problem121.emoji  problem122.vb  problem123.wen  problem124.ics  problem125.icon  problem126.i  problem127.nit  problem128.alice  problem129.befreak  problem13.sed  problem130.four  problem131.perchance  (+170 more)
etc/: 113_sum_simplify.hs  143_testing.hs  143_testing1.hs  143_testing2.hs  143_testing3.hs  144_scratch.txt  146_analysis.hs  152_analysis.raku  156_analysis.hs  158_analysis.hs  160_analysis.hs  180_analysis.hs  180_analysis1.hs  180_proposed_solutions.txt  194_analysis.hs  194_analysis_concrete.hs  208_analysis.hs  209_analysis.hs  Temp.java  befalse_notes.txt  bfgen.lisp  bkgen.py  bkgen.sh  blsq_gen.rkt  build103.sh  build119.sh  build126.sh  build127.py  build134.sh  build136.sh  build143_old.sh  build143_old1.sh  build147.sh  build159.sh  build163.sh  build177_old.sh  build177_old1.sh  build184.sh  build199.sh  build208.sh  (+502 more)
etc/Scratch/: LICENSE
etc/com/enterprise/server/delegator/: fdcServerDelegator.E™
etc/problem200/: main.gs  problem200.sb3
etc/problem200_old/: problem200.sb3
files/: p089_roman.txt  p33.xml  (+3 more)
(+1 files in other folders)
